<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2019, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent-ws</artifactId>
        <version>5</version>
        <relativePath/>
    </parent>

    <artifactId>powsybl-case</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>Case</name>

    <licenses>
        <license>
            <name>Mozilla Public License, Version 2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-case-server.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-case-server.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-case-server.git</url>
    </scm>

    <modules>
        <module>case-datasource-client</module>
        <module>case-server</module>
        <module>case-distribution</module>
    </modules>

    <developers>
        <developer>
            <name>Abdelsalem HEDHILI</name>
            <email>abdelsalem.hedhili@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <java.version>11</java.version>

        <!-- 4.13.1 is incompatible with spring-boot-starter-test -->
        <junit.version>4.13</junit.version>
        <mockito-inline.version>3.11.1</mockito-inline.version>
        <lombok.version>1.18.10</lombok.version>
        <springboot.version>2.4.7</springboot.version>
        <springfox.version>2.9.2</springfox.version>
        <spring-cloud.version>2020.0.3</spring-cloud.version>
        <jackson-datatype-joda.version>2.11.0</jackson-datatype-joda.version>
        <log4j2-mock-version>0.0.2</log4j2-mock-version>

        <powsybl-core.version>4.2.0</powsybl-core.version>

        <sonar.coverage.jacoco.xmlReportPaths>
            ../case-distribution/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>

        <sonar.exclusions>
            **/generated/**/*
        </sonar.exclusions>
    </properties>

    <profiles>
        <profile>
            <id>client</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>case-datasource-client</module>
            </modules>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <!-- overrides of imports -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>

            <!-- imports -->
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-core</artifactId>
                <version>${powsybl-core.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- project specific dependencies (also overrides imports, but separate for clarity) -->
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger-ui</artifactId>
                <version>${springfox.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>${springfox.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-joda</artifactId>
                <version>${jackson-datatype-joda.version}</version>
            </dependency>
            <dependency>
                <groupId>de.dentrassi.elasticsearch</groupId>
                <artifactId>log4j2-mock</artifactId>
                <version>${log4j2-mock-version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
